[gd_scene load_steps=12 format=2]

[ext_resource path="res://Nodes/Screens/Worlds/SubWorld.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/Objects/GameObjects/PickUpTape.tscn" type="PackedScene" id=2]
[ext_resource path="res://Nodes/Objects/GameObjects/NavButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Images/Render/Scene2/Render2x4PH.png" type="Texture" id=4]
[ext_resource path="res://Scripts/GameObjects/SimpleVoiceLock.gd" type="Script" id=5]
[ext_resource path="res://Scripts/GameObjects/MessageListener.gd" type="Script" id=6]
[ext_resource path="res://Scripts/_Debug/_DebugMessageListener.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "DeviceHearing"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("SimpleVoiceLock/TEMP_ACCEPT:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.920977, -0.2, -0.0197734, 0.3, 0.0296601, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("SimpleVoiceLock/TEMP_LIGHT:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "DeviceNotHearing"
loop = true
step = 0.02
tracks/0/type = "bezier"
tracks/0/path = NodePath("SimpleVoiceLock/TEMP_ACCEPT:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("SimpleVoiceLock/TEMP_LIGHT:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "DeviceUnlocked"

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("SimpleVoiceLock/TEMP_ACCEPT:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.196078, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("SimpleVoiceLock/TEMP_ACCEPT:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.843137, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("SimpleVoiceLock/TEMP_ACCEPT:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.156863, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("SimpleVoiceLock/TEMP_ACCEPT:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("SimpleVoiceLock/TEMP_ACCEPT:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.196078, 0.843137, 0.156863, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SimpleVoiceLock/TEMP_LIGHT:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="SubWorld2x4" instance=ExtResource( 1 )]

[node name="WorldRender" parent="." index="0"]
texture = ExtResource( 4 )

[node name="GoBackNavButton" parent="." index="1" instance=ExtResource( 3 )]
margin_left = 30.0
margin_top = 492.0
margin_right = 139.0
margin_bottom = 566.0
text = "Voltar"
subworld_path = NodePath("..")

[node name="PickUpTape" parent="." index="2" instance=ExtResource( 2 )]
position = Vector2( 504, 399 )
rotation = 0.24847
scale = Vector2( 1, 0.720001 )
tape_id = "Alien Sound"
normal_color = Color( 0.286275, 0.521569, 0.270588, 1 )
hover_color = Color( 0.196078, 0.843137, 0.156863, 1 )

[node name="SimpleVoiceLock" type="Node2D" parent="." index="3"]
script = ExtResource( 5 )
key_password = "ABRIR"

[node name="MessageListener" type="Node" parent="SimpleVoiceLock" index="0"]
script = ExtResource( 6 )

[node name="_DebugMessageListener" type="Node" parent="SimpleVoiceLock/MessageListener" index="0"]
script = ExtResource( 7 )

[node name="TEMP_ACCEPT" type="ColorRect" parent="SimpleVoiceLock" index="1"]
margin_left = 624.0
margin_top = 127.0
margin_right = 708.0
margin_bottom = 156.0
color = Color( 0.196078, 0.843137, 0.156863, 0 )

[node name="TEMP_LIGHT" type="ColorRect" parent="SimpleVoiceLock" index="2"]
margin_left = 510.0
margin_top = 70.0
margin_right = 564.0
margin_bottom = 168.0
color = Color( 0.882353, 0.603922, 0, 0.45098 )

[node name="DeviceAnim" type="AnimationPlayer" parent="SimpleVoiceLock" index="3"]
root_node = NodePath("../..")
autoplay = "DeviceNotHearing"
anims/DeviceHearing = SubResource( 1 )
anims/DeviceNotHearing = SubResource( 2 )
anims/DeviceUnlocked = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="ScreenActions" type="AnimationPlayer" parent="." index="4"]

[connection signal="started_hearing" from="SimpleVoiceLock" to="SimpleVoiceLock/DeviceAnim" method="play" binds= [ "DeviceHearing" ]]
[connection signal="stopped_hearing" from="SimpleVoiceLock" to="SimpleVoiceLock/DeviceAnim" method="play" binds= [ "DeviceNotHearing" ]]
[connection signal="message_received" from="SimpleVoiceLock/MessageListener" to="SimpleVoiceLock" method="_unlock"]
